20160108 dholland	Print why if disk geometry initializion fails.
20160105 dholland	Standardize and document the exit codes.
20160105 dholland	Allow K, M, etc. suffixes for disk/memory sizes.
20160105 dholland	Make the trace device reject (vs. ignore) invalid args.
20160105 dholland	Add -C option to supply device config arguments.

20151222 dholland	System/161 2.0.4 released.
20151222 dholland	Improve the way -X works.
20151222 dholland	Make trace161 -h output include the trace flag list.
20151222 dholland	Use shell printf instead of echo -n. Apparently Apple
........		still ships a broken sh whose echo prints literal "-n".
20151222 dholland	Apparently some Linux installs demand _GNU_SOURCE to
........		be allowed to see/use ftruncate.
20150808 dholland	Actually install the new prof.html. Sigh.
........		(issued as patch for 2.0.3)

20150804 dholland	System/161 2.0.3 released.
20150714 dholland	Fix the serial port FORCE logic meant to prevent
........		interrupt flapping. Thanks to Winnie Wu for a test
........		kernel and workload that reliably repeated the problem.
20150709 dholland	Recognize some obvious aliases for disk161 commands.
20150706 dholland	Add page on profiling to the manual.
20150706 dholland	Add dynamic profiling control to the trace device.
20150703 dholland	If profiling, write the profile out if we die().
20150703 dholland	Include seek times in disk activity trace output.

20150126 dholland	System/161 2.0.2 released.
20150126 dholland	Fix brown paper bag release. Sigh.
20150126 dholland	System/161 2.0.1 released.
20150121 dholland	Fix up some gdb threads issues appearing with gdb 7.8.
20150117 dholland	Update included .hgignore file, from Cary Gray.

20150115 dholland	System/161 2.0 released.
20150115 dholland	Add workaround to make disk rotdelay deterministic.
20150114 dholland	Fix stdint.h-related build problems on Linux.
20150114 dholland	Fix flock-related build problem on Linux.